# BlackJackDemo

./: README.md  pyproject.toml  tox.ini
.github/workflows/: unittests.yml
src/: models.py
src/blackjack_demo/: models.py
tests/: test_models.py
