[project]
name = "blackjack-demo"
description = "Simply BlackJack game"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Do Trong Anh", email = "anh.trong.do.1994@gmail.com" }]
keywords = ["blackjack", "demo", "practice"]
classifiers = [
    "Development Status :: 1 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []     # add all the dependencies here
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0"
]
coverage = [
    "coverage==7.6.12"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "blackjack_demo.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}